src/tests/snapshots/Shlang__tests__parser_test__assignement.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"b = 1;\")"
---
Ok(
    Spanned {
        unspanned: Assignment(
            Assignment {
                var_name: "b",
                value: Spanned {
                    unspanned: Value(
                        Num(
                            1.0,
                        ),
                    ),
                    span: (
                        4,
                        5,
                    ),
                },
            },
        ),
        span: (
            2,
            3,
        ),
    },
)
