src/tests/snapshots/Shlang__tests__parser_test__func_expr.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"func(b){1}\")"
---
Ok(
    Spanned {
        unspanned: Value(
            Function(
                Function {
                    block: Spanned {
                        unspanned: Block(
                            Block {
                                body: [
                                    Spanned {
                                        unspanned: ResultNode(
                                            Spanned {
                                                unspanned: Value(
                                                    Num(
                                                        1.0,
                                                    ),
                                                ),
                                                span: (
                                                    8,
                                                    9,
                                                ),
                                            },
                                        ),
                                        span: (
                                            8,
                                            9,
                                        ),
                                    },
                                ],
                            },
                        ),
                        span: (
                            7,
                            9,
                        ),
                    },
                    args: [
                        "b",
                    ],
                },
            ),
        ),
        span: (
            4,
            10,
        ),
    },
)
