src/tests/snapshots/Shlang__tests__parser_test__multi_var_decl.snap
---
source: src/tests/parser_test.rs
expression: "parse_full(\"var a; var a;\")"
---
[
    Spanned {
        unspanned: Declaration(
            Declaration {
                var_name: "a",
                value: Spanned {
                    unspanned: Value(
                        Null,
                    ),
                    span: (
                        4,
                        5,
                    ),
                },
            },
        ),
        span: (
            4,
            6,
        ),
    },
    Spanned {
        unspanned: Declaration(
            Declaration {
                var_name: "a",
                value: Spanned {
                    unspanned: Value(
                        Null,
                    ),
                    span: (
                        11,
                        12,
                    ),
                },
            },
        ),
        span: (
            11,
            13,
        ),
    },
]
