src/tests/snapshots/Shlang__tests__parser_test__nested_block_with_result.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"func(b){do{1}1}\")"
---
Ok(
    Spanned {
        unspanned: Value(
            Function(
                Function {
                    block: Spanned {
                        unspanned: Block(
                            Block {
                                body: [
                                    Spanned {
                                        unspanned: DoBlock(
                                            DoBlock {
                                                body: Spanned {
                                                    unspanned: Block(
                                                        Block {
                                                            body: [
                                                                Spanned {
                                                                    unspanned: ResultNode(
                                                                        Spanned {
                                                                            unspanned: Value(
                                                                                Num(
                                                                                    1.0,
                                                                                ),
                                                                            ),
                                                                            span: (
                                                                                11,
                                                                                12,
                                                                            ),
                                                                        },
                                                                    ),
                                                                    span: (
                                                                        11,
                                                                        12,
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                    span: (
                                                        10,
                                                        12,
                                                    ),
                                                },
                                            },
                                        ),
                                        span: (
                                            10,
                                            12,
                                        ),
                                    },
                                    Spanned {
                                        unspanned: ResultNode(
                                            Spanned {
                                                unspanned: Value(
                                                    Num(
                                                        1.0,
                                                    ),
                                                ),
                                                span: (
                                                    13,
                                                    14,
                                                ),
                                            },
                                        ),
                                        span: (
                                            13,
                                            14,
                                        ),
                                    },
                                ],
                            },
                        ),
                        span: (
                            7,
                            10,
                        ),
                    },
                    args: [
                        "b",
                    ],
                },
            ),
        ),
        span: (
            4,
            15,
        ),
    },
)
