src/tests/snapshots/Shlang__tests__parser_test__nested_struct.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"struct abc{struct dfg{};};\")"
---
Ok(
    Spanned {
        unspanned: StructDef(
            StructDef {
                name: "abc",
                fields: [
                    Spanned {
                        unspanned: StructDef(
                            StructDef {
                                name: "dfg",
                                fields: [],
                            },
                        ),
                        span: (
                            21,
                            23,
                        ),
                    },
                ],
            },
        ),
        span: (
            10,
            17,
        ),
    },
)
