src/tests/snapshots/Shlang__tests__parser_test__nested_toplevel_block.snap
---
source: src/tests/parser_test.rs
expression: "parse_full(\"func(b){do{1}}\")"
---
Spanned {
    unspanned: Block {
        body: [
            Spanned {
                unspanned: Value(
                    Function(
                        Function {
                            block: Spanned {
                                unspanned: Block {
                                    body: [
                                        Spanned {
                                            unspanned: DoBlock(
                                                DoBlock {
                                                    body: Spanned {
                                                        unspanned: Block {
                                                            body: [
                                                                Spanned {
                                                                    unspanned: ResultNode(
                                                                        Spanned {
                                                                            unspanned: Value(
                                                                                Num(
                                                                                    1.0,
                                                                                ),
                                                                            ),
                                                                            span: (
                                                                                11,
                                                                                12,
                                                                            ),
                                                                        },
                                                                    ),
                                                                    span: (
                                                                        11,
                                                                        12,
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                        span: (
                                                            10,
                                                            12,
                                                        ),
                                                    },
                                                },
                                            ),
                                            span: (
                                                10,
                                                12,
                                            ),
                                        },
                                    ],
                                },
                                span: (
                                    7,
                                    10,
                                ),
                            },
                            args: [
                                "b",
                            ],
                        },
                    ),
                ),
                span: (
                    4,
                    14,
                ),
            },
        ],
    },
    span: (
        0,
        13,
    ),
}
