src/tests/snapshots/Shlang__tests__parser_test__single_var_decl.snap
---
source: src/tests/parser_test.rs
expression: "parse_full(\"var a;\")"
---
Spanned {
    unspanned: Block {
        body: [
            Spanned {
                unspanned: Declaration(
                    Declaration {
                        var_name: "a",
                        value: Spanned {
                            unspanned: Value(
                                Null,
                            ),
                            span: (
                                4,
                                5,
                            ),
                        },
                    },
                ),
                span: (
                    4,
                    6,
                ),
            },
        ],
    },
    span: (
        0,
        5,
    ),
}
